# ArduinoPlatformController

./: .devcontainer.json  .gitignore  Dockerfile  README.md  build.sh  build_and_run.sh  code.service  code.sh  docker-compose.yml  ds4controller.py  frames.gv  install.sh  install_ros.sh  install_service.sh  install_services.sh  joy_controller.service  platform.service  platformio.ini  remote_install.sh  remote_serial.py  req_ros.py  ros.service  ros.sh  ros_entrypoint.sh  ros_platform.service  roscore.service  rplidar.service  send_posestamped.py  test.py  update_platformio.sh  update_ros.sh  update_steamdeck.sh  wheel_controller.service
ros/robot_platform/: CMakeLists.txt  package.xml  requirements.txt  setup.py
ros/robot_platform/config/: costmap.yaml  costmap_common_params.yaml  costmap_converter_params.yaml  ekf_localization copy.yaml  ekf_localization.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mapping.rviz  teb_local_planner_params.yaml
ros/robot_platform/launch/: all.launch  gui_controller.launch  hector_mapping.launch  jetson_csi_cam.launch  jetson_csi_stereo_cams.launch  joy_controller.launch  mapping copy.launch  mapping.launch  odometry_handler.launch  path_controller.launch  platform_controller.launch  robot_platform.launch  robot_platform_with_imu.launch  rplidar_hector.launch  rviz.launch  wheel_controller.launch
ros/robot_platform/msg/: Motor.msg  MotorRequest.msg  MotorStatus.msg  MoveRequest.msg  PlatformRequest.msg  PlatformStatus.msg  Servo.msg  ServoRequest.msg  WheelRequest.msg  WheelResponse.msg
ros/robot_platform/nodes/: gui_controller  joy_controller  odometry_handler  path_controller  platform_controller  wheel_controller
ros/robot_platform/rviz_cfg/: mapping.rviz
ros/robot_platform/src/robot_platform/: gui_controller.py  joy_controller.py  lib.py  message_utils.py  messages.py  models.py  move_registry.py  odom_handler.py  odometry_handler.py  (+13 more)
ros/robot_platform/src/robot_platform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ros/robot_platform/udev/: teensy_udev.rules
ros/robot_simplified/: CMakeLists.txt  package.xml  setup.py
ros/robot_simplified/launch/: robot_lidar.launch  robot_localization.launch  robot_mapping.launch  robot_serial_bridge.launch  robot_simplified.launch  robot_testing.launch
ros/robot_simplified/nodes/: robot_simplified  robot_testing  serial_handler
ros/robot_simplified/params/: ekf_template.yaml  serial.yaml
ros_omni_platform/: CMakeLists.txt  install.sh  package.xml  run.sh  setup.py
ros_omni_platform/launch/: all.launch  mapping.launch  omni_platform.launch  rviz.launch
ros_omni_platform/nodes/: omni_platform
ros_omni_platform/rviz_cfg/: mapping.rviz
ros_omni_platform/src/omni_platform/: controller.py  imu_bridge.py  omni_platform.py  platform_math.py  platform_parser.py  platform_statics.py  serial_helper.py  tf2_publisher.py
(+205 files in other folders)
